kubernetes/production/apps/selfhosted/dotbot/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotbot
spec:
  selector:
    matchLabels:
      app: dotbot
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dotbot
    spec:
      volumes:
        - name: dotbot-mongo-storage
          persistentVolumeClaim:
            claimName: dotbot-pv-claim
      containers:
        - name: dotbot
          image: ghcr.io/sillock-inc/dotbot:v0.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "500Mi"
              cpu: 500m
        - name: dotbot-db
          image: mongo:7.0.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 512Mi
          volumeMounts:
            - mountPath: /data/db
              name: dotbot-mongo-storage
