kubernetes/production/apps/selfhosted/dotbot/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dotbot
spec:
  selector:
    app: dotbot
  ports:
    - name: http
      protocol: TCP
      targetPort: http
      port: 80
