kubernetes/production/apps/selfhosted/dotbot/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotbot
  labels:
    app: dotbot
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/auth-url: http://ak-outpost-authentik-embedded-outpost.security.svc.cluster.local:9000/auth/nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
spec:
  rules:
    - host: &host dotbot.sillock.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotbot
                port:
                  name: http
  tls:
    - hosts:
        - *host
